--- a/javascript/node_lab/Dockerfile
+++ b/javascript/node_lab/Dockerfile
@@ -1,7 +1,11 @@
 FROM node:16-alpine3.11
+
 WORKDIR /usr/app
-#COPY package*.json .
-#RUN npm install --quiet
+
+RUN apk update && \    
+    apk add --no-cache \
+    bash \
+    vim 
 COPY . .
 
 
