--- a/mongodb/sandbox/docker-compose.yml
+++ b/mongodb/sandbox/docker-compose.yml
@@ -1,31 +1,39 @@
 version: '3.8'
-services: 
-    mongodb:
-        image: mongo
-        container_name: ct-mongo-guide 
-        ports: 
-            - 27017:27017            
-        volumes:
-            - ./data:/data 
-        environment: 
-            - MONGO_INITDB_ROOT_USERNAME=rootuser
-            - MONGO_INITDB_ROOT_PASSWORD=rootpass
+services:
+  node:    
+    build: .
+    ports:
+      - 5000:5000 
+    volumes:
+      - .:/usr/app
+    restart: always 
+        
+  mongodb:
+    image: mongo
+    container_name: ctmongoguide 
+    ports: 
+      - 27017:27017            
+    volumes:
+      - ./data:/data 
+    environment: 
+      - MONGO_INITDB_ROOT_USERNAME=rootuser
+      - MONGO_INITDB_ROOT_PASSWORD=rootpass
 
-    mongo-express:
-        image: mongo-express
-        container_name: mongo-express
-        restart: always
-        ports: 
-            - 8081:8081         
-        environment: 
-            - ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
-            - ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
-            - ME_CONFIG_MONGODB_SERVER=mongodb
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    restart: always
+    ports: 
+      - 8081:8081         
+    environment: 
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
+      - ME_CONFIG_MONGODB_SERVER=mongodb
 
 volumes:
-    data: {}
+  data: {}
 
 networks:
-    defaut:
-        name: mongodb_network
+  defaut:
+    name: mongodb_network
             
